-Added entity framework for saving chess state in database

--- a/ApiChessWebApp/appsettings.json
+++ b/ApiChessWebApp/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        // "DefaultConnection": "server=localhost;Database=chesswebapp;User=root;password=9044;",
+        "DefaultConnection": "server=localhost;Database=chesswebapp;User=root;password=9044"
     }
-  },
-  "AllowedHosts": "*"
 }
